--- a/yh_shop_load/src/main/resources/application.yml
+++ b/yh_shop_load/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123
-    url: jdbc:mysql://localhost:3306/yh_shop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://192.168.43.152:3306/yh_shop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initialSize: 10   #初始化连接个数
